Creation of laminar flow setup

--- a/notebooks/heat_equation_1D.ipynb
+++ b/notebooks/heat_equation_1D.ipynb
@@ -327,7 +327,7 @@
     "# plot_result(train_state, name_case=\"underdamped\")\n",
     "\n",
     "coords, y_predict, y_true = get_predictions(heat_eq_2, model_2, 1000)\n",
-    "plot_result(coords, y_predict, y_true, n=2)"
+    "plot_result(coords, y_predict, y_true, n=4, kappa=0.025)"
    ]
   },
   {
